@startuml
'https://plantuml.com/class-diagram
abstract class Collection
{
    + {abstract} Iterator CreateIterator()
}

abstract class Iterator
{
    + {abstract} First()
    + {abstract} Next()
    + {abstract} isDone()
    + {abstract} currentItem()
}

class ArrayCollection
{
    + getItem(int i)
    + count()
    + <Override> Iterator CreateIterator()
}

class ArrayIterator
{
    + {abstract} <Override> First()
    + {abstract} <Override> Next()
    + {abstract} <Override> isDone()
    + {abstract} <Override> currentItem()
}

Iterator <|-- ArrayIterator

Collection <|-- ArrayCollection

ArrayCollection <-- ArrayIterator

@enduml